--- a/Deep_Q_Network.ipynb
+++ b/Deep_Q_Network.ipynb
@@ -196,7 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dqn(n_episodes=2000, max_t=1000, eps_start=1.0, eps_end=0.01, eps_decay=0.995):\n",
+    "def dqn(agent,n_episodes=2000, max_t=1000, eps_start=1.0, eps_end=0.01, eps_decay=0.995):\n",
+    "\n",
     "    \"\"\"Deep Q-Learning.\n",
     "    \n",
     "    Params\n",
@@ -229,20 +230,51 @@
     "            print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
     "        if np.mean(scores_window)>=200.0:\n",
     "            print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode-100, np.mean(scores_window)))\n",
-    "            torch.save(agent.qnetwork_local.state_dict(), 'checkpoint.pth')\n",
+    "            torch.save(agent.qnetwork_local.state_dict(), 'checkpoint_dropout_p{}_hiddenlayers{}.pth'.format(agent.qnetwork_local.drop_p,agent.qnetwork_local.hidden_layers_config))\n",
     "            break\n",
     "    return scores\n",
     "\n",
-    "scores = dqn()\n",
-    "\n",
-    "# plot the scores\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111)\n",
-    "plt.plot(np.arange(len(scores)), scores)\n",
-    "plt.ylabel('Score')\n",
-    "plt.xlabel('Episode #')\n",
-    "plt.show()"
+    "def plot_scores(scores, axis_handle=None, label=\"\"):\n",
+    "    # plot the scores\n",
+    "    if axis_handle is None:\n",
+    "        f, axis_handle = plt.subplots()\n",
+    "    # fig = plt.figure()\n",
+    "    # ax = fig.add_subplot(111)\n",
+    "    axis_handle.plot(np.arange(len(scores)), scores,label=label)\n",
+    "    plt.ylabel('Score')\n",
+    "    plt.xlabel('Episode #')\n",
+    "    plt.legend()\n",
+    "    # plt.show()\n",
+    "    return axis_handle"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "agents_params=[\n",
+    "    (0.0, [64,64]),\n",
+    "    (0.1, [64,64]),\n",
+    "    (0.3, [64,64]),\n",
+    "    (0.0,[64,64,64]),\n",
+    "    (0.0,[32,64,32]),\n",
+    "    (0.0,[32,32,32,32,32,32])\n",
+    "]\n",
+    "\n",
+    "axis_handle=None\n",
+    "for agent_params in agents_params:\n",
+    "    print(\"--------------\\nTrying out dropout_probab {} and hidden_layers {}\".format(agent_params[0],agent_params[1]))\n",
+    "    agent = Agent(state_size=8, action_size=4, seed=0,drop_p=agent_params[0],hidden_layers_config=agent_params[1])\n",
+    "    scores = dqn(agent=agent)\n",
+    "    axis_handle=plot_scores(scores,axis_handle,label=str(agent_params))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
