experience replay - doesnt work properly yet

--- a/Deep_Q_Network.ipynb
+++ b/Deep_Q_Network.ipynb
@@ -41,7 +41,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1.1 some tests to check how pytorch works"
+    "#### 1.1 some tests to check how pytorch works"
    ],
    "metadata": {
     "collapsed": false,
@@ -84,7 +84,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1.2 Some System Checks"
+    "#### 1.2 Some System Checks"
    ],
    "metadata": {
     "collapsed": false,
@@ -98,6 +98,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# Determine if cuda is available for training\n",
     "torch.cuda.is_available()"
    ],
    "metadata": {
@@ -179,20 +180,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "print(agent.qnetwork_local)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,17 +242,19 @@
    "source": [
     "agents_params=[\n",
     "    (0.0, [64,64]),\n",
-    "    (0.1, [64,64]),\n",
-    "    (0.3, [64,64]),\n",
-    "    (0.0,[64,64,64]),\n",
-    "    (0.0,[32,64,32]),\n",
-    "    (0.0,[32,32,32,32,32,32])\n",
+    "    # (0.1, [64,64]),\n",
+    "    # (0.3, [64,64]),\n",
+    "    # (0.0,[64,64,64]),\n",
+    "    # (0.0,[32,64,32]),\n",
+    "    # (0.0,[32,32,32,32,32,32])\n",
     "]\n",
     "\n",
     "axis_handle=None\n",
     "for agent_params in agents_params:\n",
     "    print(\"--------------\\nTrying out dropout_probab {} and hidden_layers {}\".format(agent_params[0],agent_params[1]))\n",
-    "    agent = Agent(state_size=8, action_size=4, seed=0,drop_p=agent_params[0],hidden_layers_config=agent_params[1])\n",
+    "    agent = Agent(state_size=8, action_size=4, seed=0,drop_p=agent_params[0],hidden_layers_config=agent_params[1],\n",
+    "                  duelling_networks=True,\n",
+    "                  priority_experience=False)\n",
     "    scores = dqn(agent=agent)\n",
     "    axis_handle=plot_scores(scores,axis_handle,label=str(agent_params))"
    ],
