--- a/navigation_project/Navigation.ipynb
+++ b/navigation_project/Navigation.ipynb
@@ -45,22 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001B[31mERROR: Invalid requirement: './python'\r\n",
-      "Hint: It looks like a path. File './python' does not exist.\u001B[0m\r\n",
-      "\u001B[33mWARNING: You are using pip version 21.1.2; however, version 21.1.3 is available.\r\n",
-      "You should consider upgrading via the '/home/q409893/work/repos/udacity/venv/bin/python -m pip install --upgrade pip' command.\u001B[0m\r\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "!pip -q install ./python"
+    "import os\n",
+    "deps_file=\"./python/requirements.txt\"\n",
+    "if os.path.exists(deps_file):\n",
+    "    !pip -q install ./python\n",
+    "else:\n",
+    "    print(\"Could not locate requirements.txt. Check section 0\")"
    ]
   },
   {
@@ -78,7 +76,7 @@
    "source": [
     "from unityagents import UnityEnvironment\n",
     "import numpy as np\n",
-    "ss\n",
+    "\n",
     "#IMPORTANT: The version with visualization never worked for me so I opted to use the NoVis (no visualization) version.\n",
     "env = UnityEnvironment(file_name=\"Banana_Linux_NoVis/Banana.x86_64\")"
    ]
