--- a/navigation_project/Navigation.ipynb
+++ b/navigation_project/Navigation.ipynb
@@ -235,7 +235,7 @@
     "            print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
     "        if np.mean(scores_window)>=13.0:\n",
     "            print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode-100, np.mean(scores_window)))\n",
-    "            torch.save(agent.qnetwork_local.state_dict(), 'checkpoint_dropout_p{}_hiddenlayers{}.pth'.format(agent.qnetwork_local.drop_p,agent.qnetwork_local.hidden_layers_config))\n",
+    "            torch.save(agent.qnetwork_local.state_dict(), \"trained_models/\" + \"checkpoint_dropout_p{}_hiddenlayers{}.pth\".format(agent.qnetwork_local.drop_p,agent.qnetwork_local.hidden_layers_config))\n",
     "            break\n",
     "    return scores\n",
     "\n",
@@ -295,16 +295,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# env.close() # Ensuring the environment is not closed so that training can commence"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# env.close() # Ensuring the environment is not closed so that training can commence"
+   ]
   }
  ],
  "metadata": {
