--- a/navigation_project/README
+++ b/navigation_project/README
@@ -1,8 +1,19 @@
 This is the code and report for the Navigation project of the Udacity Deep Reinforcement Learning Nano Degree (DRLND).
 
+The project's goal is to train a smart agent that can collect as many yellow bananas in a square world while avoiding black bananas.
+![banana banana](banana.gif)
+
+The state is a 37 dimensional composed of the agent's velocity and the observability of bananas along rays around the object.
+
+The agent can choose any of four actions (forward, backward, left, right).
+
+## Instructions
+
 The code is simply executed by observing the instructions in the Jupyter notebook. The notebook also explains how
 to setup the python environment and get all pre-requisites.
 
+## Sample output
 The Navigation.html is a report showing the results obtained when solving the challenge using different DQN configurations.
 
+## Final notes
 The submitted code builds upon the baseline notebooks and python files provided by Udacity.
