cleaned output of Deep_Q_Network.ipynb

--- a/Deep_Q_Network.ipynb
+++ b/Deep_Q_Network.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Deep Q-Network (DQN)\n",
     "---\n",
-    "In this notebook, you will implem*ent a DQN agent with OpenAI Gym's LunarLander-v2 environment.\n",
+    "In this notebook, you will implement a DQN agent with OpenAI Gym's LunarLander-v2 environment.\n",
     "\n",
     "### 1. Import the Necessary Packages"
    ]
@@ -40,19 +40,24 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#### 1.1 some tests to check how pytorch works"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "#### 1.1 some tests to check how pytorch works"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%% TESTS\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -73,40 +78,33 @@
     "print(f\"t.max(dim=0): {t.max(dim=0)}\") # outputs a tuple with [0] being the max vals and [1] being the indices\n",
     "print(f\"torch.max(t): {torch.max(t)}\") # outputs only the max value\n",
     "print(f\"t.max(): {t.max()}\") # outputs oly the max value"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% TESTS\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#### 1.2 Some System Checks"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "#### 1.2 Some System Checks"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Determine if cuda is available for training\n",
     "torch.cuda.is_available()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,11 +147,15 @@
    "outputs": [],
    "source": [
     "from dqn_agent import Agent\n",
+    "import time\n",
     "\n",
     "agent = Agent(state_size=8, action_size=4, seed=0)\n",
     "\n",
     "# watch an untrained agent\n",
     "state = env.reset()\n",
+    "print(f\"state: {state}\")\n",
+    "print(f\"state.dtype: {state.dtype}\")\n",
+    "time.sleep(5)\n",
     "img = plt.imshow(env.render(mode='rgb_array'))\n",
     "for j in range(200):\n",
     "    action = agent.act(state)\n",
@@ -183,6 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "CHECKPOINT_FOLDER=\"checkpoints\"\n",
     "def dqn(agent,n_episodes=2000, max_t=1000, eps_start=1.0, eps_end=0.01, eps_decay=0.995):\n",
     "\n",
     "    \"\"\"Deep Q-Learning.\n",
@@ -238,6 +241,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "agents_params=[\n",
@@ -257,13 +265,7 @@
     "                  priority_experience=False)\n",
     "    scores = dqn(agent=agent)\n",
     "    axis_handle=plot_scores(scores,axis_handle,label=str(agent_params))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
