--- a/continuous_navigation_project/Continuous_Control.ipynb
+++ b/continuous_navigation_project/Continuous_Control.ipynb
@@ -8,80 +8,116 @@
     "\n",
     "---\n",
     "\n",
-    "You are welcome to use this coding environment to train your agent for the project.  Follow the instructions below to get started!\n",
+    "This notebook runs a deep reinforcement learning agent (particularly a DDPG agent) to solve Udacity's DRLND Continuous Control project (project 2).\n",
+    "### 0. Get Prepared\n",
+    "Follow these instructions if you are working locally (you want to setup a Jupyter Notebook locally).\n",
+    " Otherwise skip to Section 1.\n",
     "\n",
-    "### 1. Start the Environment\n",
+    "#### 0.1 Setup the right Python version\n",
+    "Use Python 3.6. You may want to either use a virtual env or setup a Conda environment as explained here:\n",
     "\n",
-    "Run the next code cell to install a few packages.  This line will take a few minutes to run!"
+    "https://github.com/udacity/deep-reinforcement-learning#dependencies\n",
+    "\n",
+    "#### 0.2 Get the python dependencies requirements.txt\n",
+    "Checkout the ./python folder of the Udacity DRLND repo:\n",
+    "\n",
+    "https://github.com/udacity/deep-reinforcement-learning\n",
+    "\n",
+    "It has a requirements.txt to ensure installing the necessary dependencies in the version specified by the course\n",
+    "(do this only when you want to work locally). Otherwise use the reference notebook provided by the course which is pre setup properly.\n",
+    "\n",
+    "#### 0.3 Get the Pre-built Unity Environment\n",
+    "Since this is an RL problem an environment is needed.\n",
+    "The course requires you to use the pre-built environment.\n",
+    "Get the right version for you from the link provided in the (README)[Reacher_Twenty_Linux_No_Vis/]\n",
+    "\n",
+    "#### 0.4 Install Dependencies\n",
+    "\n",
+    "Run the next code cell to install a few packages.  This line will take a few minutes to run!\n",
+    "\n",
+    "Make sure you have the python folder with the right requirements.txt. See Section 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "!pip -q install ./python"
+    "import os\n",
+    "deps_dir=\"./\"\n",
+    "deps_file=os.path.join(deps_dir,\"requirements.txt\")\n",
+    "if os.path.exists(deps_file):\n",
+    "    !pip -q install -r $deps_file\n",
+    "else:\n",
+    "    print(\"Could not locate requirements.txt. Check section 0\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The environments corresponding to both versions of the environment are already saved in the Workspace and can be accessed at the file paths provided below.  \n",
+    "### 1. Explore the Environment\n",
+    "<span style=\"color:red\">WARNING: DON'T EXECUTE THIS CELL IF YOU WILL ACTUALLY USE THE ENV FOR TRAINING BELOW. The provided unity env is buggy and training simply fails. You would need to restart the Kernel.</span>.\n",
     "\n",
-    "Please select one of the two options below for loading the environment."
+    "In the following you get the chance to load the environment to:\n",
+    "\n",
+    "In the next code cells, you will learn how to use the Python API to control the agent and receive feedback from the environment.\n",
+    "\n",
+    "- make sure you can load it at all\n",
+    "- explore its characteristics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "#### 1.1 Explore Characteristcs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "from unityagents import UnityEnvironment\n",
     "import numpy as np\n",
     "\n",
     "# select this option to load version 1 (with a single agent) of the environment\n",
-    "env = UnityEnvironment(file_name='Reacher_One_Linux_NoVis/Reacher.x86_64')\n",
+    "# env = UnityEnvironment(file_name='Reacher_One_Linux_NoVis/Reacher.x86_64')\n",
     "\n",
     "# select this option to load version 2 (with 20 agents) of the environment\n",
-    "# env = UnityEnvironment(file_name='/data/Reacher_Linux_NoVis/Reacher.x86_64')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Environments contain **_brains_** which are responsible for deciding the actions of their associated agents. Here we check for the first brain available, and set it as the default brain we will be controlling from Python."
-   ]
+    "env = UnityEnvironment(file_name='Reacher_Twenty_Linux_NoVis/Reacher.x86_64')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# get the default brain\n",
     "brain_name = env.brain_names[0]\n",
-    "brain = env.brains[brain_name]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. Examine the State and Action Spaces\n",
+    "brain = env.brains[brain_name]\n",
     "\n",
-    "Run the code cell below to print some information about the environment."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# reset the environment\n",
     "env_info = env.reset(train_mode=True)[brain_name]\n",
     "\n",
@@ -102,22 +138,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "### 3. Take Random Actions in the Environment\n",
+    "#### 1.2 Take Random Actions in the Environment\n",
     "\n",
-    "In the next code cell, you will learn how to use the Python API to control the agent and receive feedback from the environment.\n",
-    "\n",
-    "Note that **in this coding environment, you will not be able to watch the agents while they are training**, and you should set `train_mode=True` to restart the environment."
+    "Note that **in this coding environment, you will not be able to watch the agent while it is training**, and you should set `train_mode=True` to restart the environment."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "env_info = env.reset(train_mode=True)[brain_name]      # reset the environment    \n",
+    "env_info = env.reset(train_mode=True)[brain_name]      # reset the environment\n",
     "states = env_info.vector_observations                  # get the current state (for each agent)\n",
     "scores = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
     "while True:\n",
@@ -131,114 +168,152 @@
     "    states = next_states                               # roll over states to next time step\n",
     "    if np.any(dones):                                  # exit loop if episode finished\n",
     "        break\n",
-    "print('Total score (averaged over agents) this episode: {}'.format(np.mean(scores)))"
-   ]
+    "print('Total score (averaged over agents) this episode: {}'.format(np.mean(scores)))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "When finished, you can close the environment."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4. It's Your Turn!\n",
+    "### 2. Training a DDPG Agent to Solve the Challenge\n",
     "\n",
-    "Now it's your turn to train your own agent to solve the environment!  A few **important notes**:\n",
+    "As you can see above a purely random agent performs - as expected - very poorly.\n",
+    "Let's train a clever agent that can susbstantially outperform it.\n",
+    "Important notes:\n",
     "- When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
     "```python\n",
     "env_info = env.reset(train_mode=True)[brain_name]\n",
     "```\n",
-    "- To structure your work, you're welcome to work directly in this Jupyter notebook, or you might like to start over with a new file!  You can see the list of files in the workspace by clicking on **_Jupyter_** in the top left corner of the notebook.\n",
-    "- In this coding environment, you will not be able to watch the agents while they are training.  However, **_after training the agents_**, you can download the saved model weights to watch the agents on your own machine! "
+    "- In this coding environment, you will not be able to watch the agents while they are training.  However, **_after training the agents_**, you can download the saved model weights to watch the agents on your own machine!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "'Academy' started successfully!\n",
+      "Unity Academy name: Academy\n",
+      "        Number of Brains: 1\n",
+      "        Number of External Brains : 1\n",
+      "        Lesson number : 0\n",
+      "        Reset Parameters :\n",
+      "\t\tgoal_size -> 5.0\n",
+      "\t\tgoal_speed -> 1.0\n",
+      "Unity brain name: ReacherBrain\n",
+      "        Number of Visual Observations (per agent): 0\n",
+      "        Vector Observation space type: continuous\n",
+      "        Vector Observation space size (per agent): 33\n",
+      "        Number of stacked Vector Observation: 1\n",
+      "        Vector Action space type: continuous\n",
+      "        Vector Action space size (per agent): 4\n",
+      "        Vector Action descriptions: , , , \n",
+      "/home/q409893/work/tools/miniconda3/envs/udacity/lib/python3.6/site-packages/torch/nn/functional.py:995: UserWarning: nn.functional.tanh is deprecated. Use torch.tanh instead.\n",
+      "  warnings.warn(\"nn.functional.tanh is deprecated. Use torch.tanh instead.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "---------------------\n",
+      "Environment successfully started\n",
+      "Number of agents: 20\n",
+      "Size of each action: 4\n",
+      "There are 20 agents. Each observes a state with length: 33\n",
+      "The state for the first agent looks like: [ 0.00000000e+00 -4.00000000e+00  0.00000000e+00  1.00000000e+00\n",
+      " -0.00000000e+00 -0.00000000e+00 -4.37113883e-08  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00 -1.00000000e+01  0.00000000e+00\n",
+      "  1.00000000e+00 -0.00000000e+00 -0.00000000e+00 -4.37113883e-08\n",
+      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00  5.75471878e+00 -1.00000000e+00\n",
+      "  5.55726624e+00  0.00000000e+00  1.00000000e+00  0.00000000e+00\n",
+      " -1.68164849e-01]\n",
+      "--------------------------------------------------------------\n",
+      "device used: cuda:0\n",
+      "--------------------------------------------------------------\n",
+      "Episode 2\tMean (over agents) episode score: 0.45. Duration: 6.7s"
+     ]
+    }
+   ],
+   "source": [
+    "from continuous_navigation_project import state_size, action_size, num_agents\n",
+    "from continuous_navigation_project.agent import Agent\n",
+    "from continuous_navigation_project.ddpg import ddpg\n",
+    "agent = Agent(state_size=state_size, action_size=action_size, random_seed=2, num_parallel_agents=num_agents,\n",
+    "              num_trainings_per_update=20,\n",
+    "              time_steps_before_training=20,\n",
+    "              batch_size=128,\n",
+    "              num_episodes_to_increase_num_trainings=3,\n",
+    "              lr_actor=1e-4,\n",
+    "              lr_critic=1e-4,\n",
+    "              make_local_target_weights_equal_at_init=True,\n",
+    "              clip_grad_norm=False)\n",
+    "\n",
+    "episodes_to_make_target_equal_to_local = 5\n",
+    "max_timesteps_per_episode = 1000\n",
+    "scores_global, episode_durations = ddpg(agent=agent,\n",
+    "                                        n_episodes=130,\n",
+    "                                        max_t=max_timesteps_per_episode,\n",
+    "                                        print_every=20,\n",
+    "                                        episodes_to_make_target_equal_to_local=episodes_to_make_target_equal_to_local)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "from collections import deque\n",
-    "from continuous_navigation_project.agent import Agent\n",
-    "import torch\n",
-    "\n",
-    "def ddpg(agent, n_episodes=1000, max_t=300, print_every=100):\n",
-    "    \n",
-    "    scores_deque = deque(maxlen=print_every)\n",
-    "    scores = []\n",
-    "    for i_episode in range(1, n_episodes+1):\n",
-    "        env_info = env.reset(train_mode=True)[brain_name]\n",
-    "        state = env_info.vector_observations[0]\n",
-    "        agent.reset()\n",
-    "        score = 0\n",
-    "        for t in range(max_t):\n",
-    "            \n",
-    "            #action = agent.act(state)\n",
-    "            #next_state, reward, done, _ = env.step(action)\n",
-    "            #agent.step(state, action, reward, next_state, done)\n",
-    "            action = agent.act(state)\n",
-    "            env_info = env.step(action)[brain_name]        # send the action to the environment\n",
-    "            next_state = env_info.vector_observations[0]   # get the next state\n",
-    "            reward = env_info.rewards[0]                   # get the reward\n",
-    "            done = env_info.local_done[0]                  # see if episode has finished\n",
-    "            agent.step(state.astype(np.float32), action, reward, next_state.astype(np.float32), done)\n",
-    "            \n",
-    "            state = next_state\n",
-    "            score += reward\n",
-    "            if done:\n",
-    "                break \n",
-    "        scores_deque.append(score)\n",
-    "        scores.append(score)\n",
-    "        print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_deque)), end=\"\")\n",
-    "        torch.save(agent.actor_local.state_dict(), 'checkpoint_actor.pth')\n",
-    "        torch.save(agent.critic_local.state_dict(), 'checkpoint_critic.pth')\n",
-    "        if i_episode % print_every == 0:\n",
-    "            print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_deque)))\n",
-    "        if np.mean(scores[-100:])>=30.0:\n",
-    "            print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode-100, np.mean(scores_window)))\n",
-    "            torch.save(agent.qnetwork_local.state_dict(), \"trained_models/\" + \"checkpoint_dropout_p{}_hiddenlayers{}.pth\".format(agent.qnetwork_local.drop_p,agent.qnetwork_local.hidden_layers_config))\n",
-    "            break\n",
-    "            \n",
-    "    return scores\n",
-    "\n",
-    "MAX_T=300\n",
-    "agent = Agent(state_size=state_size, action_size=action_size, random_seed=2)\n",
-    "scores = ddpg(agent=agent,max_t=MAX_T,print_every=20)\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111)\n",
-    "plt.plot(np.arange(1, len(scores)+1), scores)\n",
-    "plt.ylabel('Score')\n",
-    "plt.xlabel('Episode #')\n",
-    "plt.show()\n"
-   ]
+    "env.close()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "drlnd",
    "language": "python",
-   "name": "python3"
+   "name": "drlnd"
   },
   "language_info": {
    "codemirror_mode": {
@@ -250,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
