future work added to report

--- a/continuous_navigation_project/Continuous_Control.ipynb
+++ b/continuous_navigation_project/Continuous_Control.ipynb
@@ -29,7 +29,7 @@
     "#### 0.3 Get the Pre-built Unity Environment\n",
     "Since this is an RL problem an environment is needed.\n",
     "The course requires you to use the pre-built environment.\n",
-    "Get the right version for you from the link provided in the (README)[Reacher_Twenty_Linux_No_Vis/]\n",
+    "Get the right version for you from the link provided in the [README](continuous_navigation_project/Reacher_Twenty_Linux_No_Vis/)\n",
     "\n",
     "#### 0.4 Install Dependencies\n",
     "\n",
@@ -389,8 +389,41 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "env.close()\n"
+    "env.close()"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 3. Future Works\n",
+    "We also implemented one policy per agent. While it did train the results were not significantly better than the single\n",
+    " policy solution. However, that was before the final configuration was found with which the challenge was solved.\n",
+    " Further analysis can be devoted to this solution. It is in the branch multi_agent_multi_policy. In particular the changes from master need to be merged and a strategy for resetting all policies to be equal every number of episodes based on performance can be investigated.\n",
+    "\n",
+    "Another issue to tackle if time permits is the lousy training speed.\n",
+    "Observing the figure above it becomes apparent that the training time per episode almost doubles by the end of the training.\n",
+    "After conducting code profiling it became apparent that the sampling from the buffer that increases by size over time takes more and more time.\n",
+    "This is expected as the deque data structure in python is a doubly linked list, albeit with some optimizations that make lookup better than O(N) where N is the number of samples.\n",
+    "Also the GPU utilization is fairly low showing that other system resources are the bottleneck."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
