.gitignore + correction of reference to installation instruction + Report.html that was accidentally deleted

--- a/continuous_navigation_project/Continuous_Control.ipynb
+++ b/continuous_navigation_project/Continuous_Control.ipynb
@@ -29,7 +29,7 @@
     "#### 0.3 Get the Pre-built Unity Environment\n",
     "Since this is an RL problem an environment is needed.\n",
     "The course requires you to use the pre-built environment.\n",
-    "Get the right version for you from the link provided in the [README](continuous_navigation_project/Reacher_Twenty_Linux_No_Vis/)\n",
+    "Get the right version for you from the link provided in Reacher_Twenty_Linux_No_Vis/README\n",
     "\n",
     "#### 0.4 Install Dependencies\n",
     "\n",
