--- a/collaboration_and_competition_project/Tennis.ipynb
+++ b/collaboration_and_competition_project/Tennis.ipynb
@@ -8,7 +8,34 @@
     "\n",
     "---\n",
     "\n",
-    "In this notebook, you will learn how to use the Unity ML-Agents environment for the third project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893) program.\n",
+    "In this notebook, we use the Unity ML-Agents environment for the third project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893) program.\n",
+    "\n",
+    "### 0. Get Prepared\n",
+    "Follow these instructions if you are working locally (you want to setup a Jupyter Notebook locally).\n",
+    " Otherwise skip to Section 1.\n",
+    "\n",
+    "#### 0.1 Setup the right Python version\n",
+    "Use Python 3.6. You may want to either use a virtual env or setup a Conda environment as explained [here](https://github.com/udacity/deep-reinforcement-learning#dependencies)\n",
+    "\n",
+    "#### 0.2 Get the python dependencies requirements.txt\n",
+    "Checkout the ./python folder of the Udacity DRLND repo:\n",
+    "\n",
+    "https://github.com/udacity/deep-reinforcement-learning\n",
+    "\n",
+    "It has a requirements.txt to ensure installing the necessary dependencies in the version specified by the course\n",
+    "(do this only when you want to work locally). Otherwise use the reference notebook provided by the course which is pre setup properly.\n",
+    "\n",
+    "#### 0.3 Get the Pre-built Unity Environment\n",
+    "Since this is an RL problem an environment is needed.\n",
+    "The course requires you to use the pre-built environment.\n",
+    "Get the right version for you from the link provided in Reacher_Twenty_Linux_No_Vis/README\n",
+    "\n",
+    "#### 0.4 Install Dependencies\n",
+    "\n",
+    "Run the next code cell to install a few packages.  This line will take a few minutes to run!\n",
+    "\n",
+    "Make sure you have the python folder with the right requirements.txt. See Section 0.\n",
+    "\n",
     "\n",
     "### 1. Start the Environment\n",
     "\n",
@@ -51,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = UnityEnvironment(file_name=\"...\")"
+    "env = UnityEnvironment(file_name=\"Tennis_Linux_NoVis/Tennis.x86_64\")"
    ]
   },
   {
