--- a/collaboration_and_competition_project/Tennis.ipynb
+++ b/collaboration_and_competition_project/Tennis.ipynb
@@ -28,7 +28,7 @@
     "#### 0.3 Get the Pre-built Unity Environment\n",
     "Since this is an RL problem an environment is needed.\n",
     "The course requires you to use the pre-built environment.\n",
-    "Get the right version for you from the link provided in Reacher_Twenty_Linux_No_Vis/README\n",
+    "Get the right version for you from the link provided in Tennis_Linux_No_Vis/README\n",
     "\n",
     "#### 0.4 Install Dependencies\n",
     "\n",
@@ -200,6 +200,88 @@
     "env_info = env.reset(train_mode=True)[brain_name]\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from collaboration_and_competition_project.ReplayBuffer import ReplayBuffer\n",
+    "from collaboration_and_competition_project.helpers import generate_training_plots\n",
+    "\n",
+    "BUFFER_SIZE = int(1e5)  # replay buffer size # TODO: check value\n",
+    "\n",
+    "from collaboration_and_competition_project import state_size, action_size, num_agents, device\n",
+    "from collaboration_and_competition_project.agent import Agent\n",
+    "from collaboration_and_competition_project.maddpg import run_maddpg\n",
+    "\n",
+    "batch_size = 512\n",
+    "\n",
+    "replay_buffer = ReplayBuffer(action_size=action_size,\n",
+    "                             buffer_size=BUFFER_SIZE,\n",
+    "                             batch_size=batch_size,\n",
+    "                             random_seed=2,\n",
+    "                             num_collaborating_agents=num_agents,\n",
+    "                             device=device)\n",
+    "\n",
+    "agent = Agent(device=device,\n",
+    "              state_size=state_size, action_size=action_size, random_seed=2, num_competing_agents=num_agents,\n",
+    "              num_trainings_per_update=2,\n",
+    "              time_steps_before_training=5,\n",
+    "              batch_size=batch_size,\n",
+    "              num_episodes_to_increase_num_trainings=500,\n",
+    "              lr_actor=1e-3,\n",
+    "              lr_critic=1e-3,\n",
+    "              clip_grad_norm=True,\n",
+    "              weight_decay= 0.0001,\n",
+    "              start_noise_variance = 1.0,\n",
+    "              replay_buffer=replay_buffer,\n",
+    "              add_samples_only_if_high_reward=False,\n",
+    "              debug=False)\n",
+    "\n",
+    "episodes_to_make_target_equal_to_local = 200\n",
+    "max_timesteps_per_episode = 500\n",
+    "\n",
+    "scores_global, episode_durations, episode_timestep_reached = run_maddpg(agent=agent,\n",
+    "                                        n_episodes=1500,\n",
+    "                                        max_t=max_timesteps_per_episode,\n",
+    "                                        print_every=20,\n",
+    "                                        episodes_to_make_target_equal_to_local=episodes_to_make_target_equal_to_local)\n",
+    "\n",
+    "details_dict = {\"critic\": agent.critics_local[0].__repr__(),\n",
+    "                 \"actor\": agent.actors_local[0].__repr__(),\n",
+    "                 \"critic_optim\": agent.critic_optimizers[0].__repr__().replace(\"\\n\", \", \"),\n",
+    "                 \"actor_optim\": agent.actor_optimizers[0].__repr__().replace(\"\\n\", \", \"),\n",
+    "                 \"clip_grad_norm\": agent.clip_grad_norm,\n",
+    "                 \"batch_size\": agent.batch_size,\n",
+    "                 \"max_t\": episodes_to_make_target_equal_to_local,\n",
+    "                 \"time_steps_before_training\": agent.time_steps_before_training,\n",
+    "                 \"num_trainings_per_update\": agent.num_trainings_per_update,\n",
+    "                 \"num_episodes_to_increase_num_trainings\": agent.num_episodes_to_increase_num_trainings,\n",
+    "                 \"start_noise_variance\": agent.start_noise_variance,\n",
+    "                 \"noise_decay\": agent.noise_decay,\n",
+    "                 \"add_samples_only_if_high_reward\": agent.add_samples_only_if_high_reward,\n",
+    "                 \"episodes_to_make_target_equal_to_local\": episodes_to_make_target_equal_to_local\n",
+    "                 }\n",
+    "generate_training_plots(scores_global, episode_durations, episode_timestep_reached,\n",
+    "                        details_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
