Tennis.ipynb updated

--- a/collaboration_and_competition_project/Tennis.ipynb
+++ b/collaboration_and_competition_project/Tennis.ipynb
@@ -34,13 +34,57 @@
     "\n",
     "Run the next code cell to install a few packages.  This line will take a few minutes to run!\n",
     "\n",
-    "Make sure you have the python folder with the right requirements.txt. See Section 0.\n",
-    "\n",
-    "\n",
-    "### 1. Start the Environment\n",
-    "\n",
-    "We begin by importing the necessary packages.  If the code cell below returns an error, please revisit the project instructions to double-check that you have installed [Unity ML-Agents](https://github.com/Unity-Technologies/ml-agents/blob/master/docs/Installation.md) and [NumPy](http://www.numpy.org/)."
+    "Make sure you have the python folder with the right requirements.txt. See Section 0."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "deps_dir=\"./\"\n",
+    "deps_file=os.path.join(deps_dir,\"requirements.txt\")\n",
+    "if os.path.exists(deps_file):\n",
+    "    !pip -q install -r $deps_file\n",
+    "else:\n",
+    "    print(\"Could not locate requirements.txt. Check section 0\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1. Explore the Environment\n",
+    "<span style=\"color:red\">WARNING: DON'T EXECUTE THIS CELL IF YOU WILL ACTUALLY USE THE ENV FOR TRAINING BELOW. The provided unity env is buggy and training simply fails. You would need to restart the Kernel.</span>.\n",
+    "\n",
+    "In the following you get the chance to load the environment to:\n",
+    "\n",
+    "In the next code cells, you will learn how to use the Python API to control the agent and receive feedback from the environment.\n",
+    "\n",
+    "- make sure you can load it at all\n",
+    "- explore its characteristics"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 1.1 Explore Characteristcs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -49,79 +93,31 @@
    "outputs": [],
    "source": [
     "from unityagents import UnityEnvironment\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we will start the environment!  **_Before running the code cell below_**, change the `file_name` parameter to match the location of the Unity environment that you downloaded.\n",
+    "import numpy as np\n",
     "\n",
-    "- **Mac**: `\"path/to/Tennis.app\"`\n",
-    "- **Windows** (x86): `\"path/to/Tennis_Windows_x86/Tennis.exe\"`\n",
-    "- **Windows** (x86_64): `\"path/to/Tennis_Windows_x86_64/Tennis.exe\"`\n",
-    "- **Linux** (x86): `\"path/to/Tennis_Linux/Tennis.x86\"`\n",
-    "- **Linux** (x86_64): `\"path/to/Tennis_Linux/Tennis.x86_64\"`\n",
-    "- **Linux** (x86, headless): `\"path/to/Tennis_Linux_NoVis/Tennis.x86\"`\n",
-    "- **Linux** (x86_64, headless): `\"path/to/Tennis_Linux_NoVis/Tennis.x86_64\"`\n",
+    "# select this option to load version 1 (with a single agent) of the environment\n",
+    "# env = UnityEnvironment(file_name='Reacher_One_Linux_NoVis/Reacher.x86_64')\n",
     "\n",
-    "For instance, if you are using a Mac, then you downloaded `Tennis.app`.  If this file is in the same folder as the notebook, then the line below should appear as follows:\n",
-    "```\n",
-    "env = UnityEnvironment(file_name=\"Tennis.app\")\n",
-    "```"
+    "# select this option to load version 2 (with 20 agents) of the environment\n",
+    "env = UnityEnvironment(file_name='Tennis_Linux_NoVis/Tennis.x86_64')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env = UnityEnvironment(file_name=\"Tennis_Linux_NoVis/Tennis.x86_64\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Environments contain **_brains_** which are responsible for deciding the actions of their associated agents. Here we check for the first brain available, and set it as the default brain we will be controlling from Python."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "source": [
     "# get the default brain\n",
     "brain_name = env.brain_names[0]\n",
-    "brain = env.brains[brain_name]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. Examine the State and Action Spaces\n",
+    "brain = env.brains[brain_name]\n",
     "\n",
-    "In this environment, two agents control rackets to bounce a ball over a net. If an agent hits the ball over the net, it receives a reward of +0.1.  If an agent lets a ball hit the ground or hits the ball out of bounds, it receives a reward of -0.01.  Thus, the goal of each agent is to keep the ball in play.\n",
-    "\n",
-    "The observation space consists of 8 variables corresponding to the position and velocity of the ball and racket. Two continuous actions are available, corresponding to movement toward (or away from) the net, and jumping. \n",
-    "\n",
-    "Run the code cell below to print some information about the environment."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# reset the environment\n",
     "env_info = env.reset(train_mode=True)[brain_name]\n",
     "\n",
-    "# number of agents \n",
+    "# number of agents\n",
     "num_agents = len(env_info.agents)\n",
     "print('Number of agents:', num_agents)\n",
     "\n",
@@ -129,24 +125,26 @@
     "action_size = brain.vector_action_space_size\n",
     "print('Size of each action:', action_size)\n",
     "\n",
-    "# examine the state space \n",
+    "# examine the state space\n",
     "states = env_info.vector_observations\n",
     "state_size = states.shape[1]\n",
     "print('There are {} agents. Each observes a state with length: {}'.format(states.shape[0], state_size))\n",
     "print('The state for the first agent looks like:', states[0])"
-   ]
+   ],
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "### 3. Take Random Actions in the Environment\n",
+    "#### 1.2 Take Random Actions in the Environment\n",
     "\n",
-    "In the next code cell, you will learn how to use the Python API to control the agents and receive feedback from the environment.\n",
-    "\n",
-    "Once this cell is executed, you will watch the agents' performance, if they select actions at random with each time step.  A window should pop up that allows you to observe the agents.\n",
-    "\n",
-    "Of course, as part of the project, you'll have to change the code so that the agents are able to use their experiences to gradually choose better actions when interacting with the environment!"
+    "Note that **in this coding environment, you will not be able to watch the agent while it is training**, and you should set `train_mode=True` to restart the environment."
    ]
   },
   {
@@ -193,22 +191,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. It's Your Turn!\n",
+    "### 2. Training an MADDPG Agent to Solve the Challenge\n",
     "\n",
-    "Now it's your turn to train your own agent to solve the environment!  When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
+    "As you can see above a purely random agent performs - as expected - very poorly.\n",
+    "Let's train a clever agent that can susbstantially outperform it.\n",
+    "Important notes:\n",
+    "- When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
     "```python\n",
     "env_info = env.reset(train_mode=True)[brain_name]\n",
-    "```"
+    "```\n",
+    "- In this coding environment, you will not be able to watch the agents while they are training.  However, **_after training the agents_**, you can download the saved model weights to watch the agents on your own machine!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [],
    "source": [
     "from collaboration_and_competition_project.ReplayBuffer import ReplayBuffer\n",
@@ -270,7 +267,84 @@
     "                 }\n",
     "generate_training_plots(scores_global, episode_durations, episode_timestep_reached,\n",
     "                        details_dict)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
